<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor">


    <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:layout_marginTop="@dimen/medium"
            android:layout_marginEnd="@dimen/medium"
            android:src="@drawable/close_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/closing_btn_description"/>

    <ImageView
            android:id="@+id/systemFailureImage"
            android:layout_width="200dp"
            android:layout_height="210dp"
            android:src="@drawable/connect_foreground"
            app:layout_constraintBottom_toTopOf="@+id/systemFailureText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/system_failure_img_description"/>

    <TextView
            android:id="@+id/systemFailureText"
            style="@style/movieTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_failure_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/systemFailureFrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:fontFamily="@font/lato_regular"
            android:text="@string/system_failure_frase"
            android:textAlignment="center"
            android:textColor="@color/synopsisTextColor"
            android:textSize="@dimen/small_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/systemFailureText"/>

    <TextView
            android:id="@+id/tryAgainBtn"
            style="@style/movieTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxlarge"
            android:text="@string/try_again"
            android:textColor="@color/greenPrimaryColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/systemFailureFrase"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tab_indicator"
            android:layout_marginTop="@dimen/small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tryAgainBtn"
            android:contentDescription="@string/green_bar_description"/>

</androidx.constraintlayout.widget.ConstraintLayout>